--- a/.github/workflows/secrel.yml
+++ b/.github/workflows/secrel.yml
@@ -20,3 +20,26 @@ jobs:
           echo "Actor: ${{ github.actor }}"
           echo "Event Name: ${{ github.event_name }}"
           echo "Package URL: ${{ github.event.registry_package.html_url }}"
+
+  sign-image:
+    needs: show-package-details
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      id-token: write
+      contents: write
+
+    steps:
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.1.1
+
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Sign the published container image
+        run: |
+          cosign sign --yes ghcr.io/${{ github.repository }}@${{ github.event.registry_package.package_version.container_metadata.tag.digest }}
