--- a/.github/workflows/secrel.yml
+++ b/.github/workflows/secrel.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.1.1
+        with:
+          cosign-release: "v2.1.1"
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -41,5 +43,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Sign the published container image
+        env:
+          COSIGN_EXPERIMENTAL: 1
         run: |
-          cosign sign --yes ghcr.io/${{ github.repository }}@${{ github.event.registry_package.package_version.container_metadata.tag.digest }}
+          cosign sign --yes --force ghcr.io/${{ github.repository }}@${{ github.event.registry_package.package_version.container_metadata.tag.digest }}
