--- a/.github/workflows/secrel.yml
+++ b/.github/workflows/secrel.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.1.1
         with:
-          cosign-release: "latest"
+          cosign-release: "v2.1.1"
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -45,6 +45,8 @@ jobs:
       - name: Sign the published container image
         env:
           COSIGN_EXPERIMENTAL: 1
-          COSIGN_TUF_ROOT: "/tmp/tuf"
+          COSIGN_TUF_ROOT: /tmp/cosign-root
         run: |
+          mkdir -p /tmp/cosign-root
+          cosign initialize
           cosign sign --yes ghcr.io/${{ github.repository }}@${{ github.event.registry_package.package_version.container_metadata.tag.digest }}
