--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -27,10 +27,14 @@ jobs:
       - name: Get latest version
         id: get_version
         run: |
-          LATEST_VERSION=$(curl -s https://${{ env.REGISTRY }}/v2/${{ github.repository }}/tags/list | jq -r '.tags[]' | grep -v latest | sort -V | tail -n1 || echo "0.0")
-          MAJOR=$(echo $LATEST_VERSION | cut -d. -f1)
-          MINOR=$(echo $LATEST_VERSION | cut -d. -f2)
-          NEW_VERSION="$MAJOR.$((MINOR + 1))"
+          LATEST_VERSION=$(curl -s https://${{ env.REGISTRY }}/v2/${{ github.repository }}/tags/list | jq -r '.tags[]' | grep -v latest | sort -V | tail -n1 || echo "1.0")
+          if [ "$LATEST_VERSION" = "1.0" ]; then
+            NEW_VERSION="1.0"
+          else
+            MAJOR=$(echo $LATEST_VERSION | cut -d. -f1)
+            MINOR=$(echo $LATEST_VERSION | cut -d. -f2)
+            NEW_VERSION="$MAJOR.$((MINOR + 1))"
+          fi
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "Found version: $LATEST_VERSION, bumping to: $NEW_VERSION"
 
